Fix code align problem

--- a/css/screen.css
+++ b/css/screen.css
@@ -25,6 +25,7 @@ a {
 }
 
 code {
+  text-align: left;
   font-size: 13px;
   font-family: Consolas, "SF Mono", Menlo, "Dejavu Sans Mono", monospace;
 }
